# kafka-admin-tool

./: .cruft.json  .gitignore  .isort.cfg  README.md  admin.py  config.yml.example  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
kafkaadmin/: admin.py  cli.py  functions.py  options.py
tests/: test_admin.py
